--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<div id="app"></div>
+<div class="instructions">
+  <h3>Steps to show images from a GitHub repo:</h3>
+  <ol>
+    <li>Connect your stackblitz app to your github repository</li>
+    <li>From github, drop your image into your repo, allow it to upload, commit</li>
+    <li>Back at stackblitz, refresh your app</li>
+    <li>Click the image in the stackblitz file explorer, it will open with the message: "Nothing to see here, you can..." and
+      a button to download the image. Click the button, the image will open in a new tab. </li>
+    <li>Grab the url from the new tab, use it as the src for your image in the stackblitz app </li>
+  </ol>
+</div>
+<div class="example">
+  <img src="https://cdn.jsdelivr.net/gh/carballosa/js-stackblitz-static-image-jc@master/avataaars.png" alt="example">
+</div>
